# graphene-crud-maker

./: LICENSE  MANIFEST.in  README.md  README.rst  README.srt  pyproject.toml  requirements.txt  setup.cfg  setup.py
graphene_crud_maker/: core.py  utils.py
graphene_crud_maker/base/: BaseMutation.txt  BaseQuery.txt  BaseRelay.txt  CoreSchema.txt
graphene_crud_maker/management/commands/: app_name.py  maker.py
