[metadata]
# replace with your username:
name = graphene-crud-maker
version = 0.0.2
author = Dércio Sinione
author_email = derciosinione@gmail.com
description = This is a project to auto generate a graphql crud using graphene django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dercio-sinione/graphene-crud-maker
project_urls =
    Bug Tracker = https://github.com/dercio-sinione/graphene-crud-maker/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3
